--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "author": "Fernando Herrera, Bernabé García Sánchez",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.0",
         "body-parser": "^1.18.3",
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "mongoose": "^5.2.3",
+        "mongoose-plugin-autoinc": "^1.1.9",
+        "mongoose-unique-validator": "^2.0.1",
+        "underscore": "^1.9.1"
     }
 }
